2004-02-04  Lluis Sanchez Gual  <lluis@ximian.com>

	* HttpRemotingHandlerFactory.cs: Loading of remoting configuration moved
	  to System.Web.Configuraiton.

2003-12-12  Lluis Sanchez Gual  <lluis@ximian.com>

	* HttpServer.cs: Removed debug code.
	
2003-12-10  Lluis Sanchez Gual  <lluis@ximian.com>

	* HttpServer.cs: Allow the use of GET method (SdlServerSink supports it).
	Added some text constans for transport keys.
	* HttpServerChannel.cs: Add SdlChannelSinkProvider to the default 
	sink provider chain. Removed unused ErrorMessage class.

2003-11-16  Lluis Sanchez Gual  <lluis@ximian.com>

	* HttpHelper.cs: Removed usnused method GetMachineIp.
	* HttpServerChannel.cs: Added support for priority, bindTo, useIpAddress and
	  machineName properties.

2003-11-13  Lluis Sanchez Gual <lluis@ximian.com>

	* HttpChannel.cs: Create empty property dictionary in the default
	  constructor.

2003-11-13  Lluis Sanchez Gual <lluis@ximian.com>

	* HttpChannel.cs: Moved initialization code in SetupChannel to the
	  respective client and server channels. Added implementatoin of the
	  interface IChannelReceiverHook.
	* HttpRemotingHandler.cs: Implemented.
	* HttpRemotingHandlerFactory.cs: Implemented.
	* HttpServer.cs: In general, use Stream instances instead of Socket. It is
	  more reusable in this way. Also improved formatting.
	* HttpServerChannel.cs: Implemented support for IChannelReceiverHook.
	  Added new method DispatchRequest in HttpServerTransportSink that can
	  be reused by HttpRemotingHandler.

2003-11-12  Lluis Sanchez Gual <lluis@ximian.com>

	* HttpServerChannel.cs: Removed StartListening call from constructor. It
	  is called by the remoting framework.
	* HttpClientChannel.cs, HttpHelper.cs: Fixed some formatting.

2003-09-17  Lluis Sanchez Gual <lluis@ximian.com>

	* HttpHelper.cs: Fixed bug #48468. Patch by Jean-Marc Andre.
	* HttpClientChannel.cs HttpServer.cs HttpServerChannel.cs: Fixed some warnings.

2003-08-22  Lluis Sanchez Gual <lluis@ximian.com>
